assets/css/style.css
* {
  box-sizing: border-box;
  font-family: Arial, Helvetica, sans-serif;
}

body {
  margin: 0px;
  padding: 0;
  line-height: 1.5;
}

header {
  padding: 20px;
  background-color: rgb(9, 42, 78);
  color: white;
}

h1 {
  border: solid;
  padding: 5px;
  display: inline;
  font-size: 50px;
}

nav {
  display: inline;
}

ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
  display: inline;
  float: right;
}

li {
  display: inline-block;
}

li a {
  display: block;
  color: white;
  text-align: center;
  padding: 18px;
  text-decoration: none;
  font-size: 20px;
}

/*hero banner css properties*/
.hero-banner {
  background-image: url(../images/Miyajima.jpeg);
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  height: 250px;
  position: relative;
  max-width:100%;
}

.inner-image {
  border-radius: 50%;
  max-width: 220px;
  border: white 3px solid;
  padding: 5px;
  margin: 15px;
}

.hero-banner h2 {
  position: absolute;
  bottom: 8px;
  right: 16px;
  background-color: rgb(23, 67, 114);
  color: white;
  border: solid;
  padding: 3px;
}

/*about me section*/
.about-me-title {
  margin: 50px;
  font-size: 30px;
  text-align: end;
}

#about {
  display: flex;
  margin: 30px;
  font-size: 20px;
  align-items: center;
}

#about h2 {
  font-size: 40px;
  border-right: rgb(9, 42, 78)solid 5px;
  padding: 30px;
}

.about-me-text {
  padding: 30px;
  text-align: justify;
}

/*project content section*/
.page-section {
  padding: 20px;
  margin: 30px;
  font-size: 30px;
  display: flex;
}

.projects-title {
  font-size: 40px;
  border-right: rgb(9, 42, 78)solid 5px;
  padding: 18px;
}

.project-content {
  margin: 0px 5%;
  max-width:100%;
  padding: 50px;
  display: grid;
  grid-template-rows: 200px 200px 200px 200px;
  grid-template-columns: 200px 200px 200px 200px;
  grid-template-areas: 
  "horiseon horiseon horiseon horiseon"
  "horiseon horiseon horiseon horiseon"
  "project2 project2 project3 project3"
  "project4 project4 project5 project5"
  ;
}

#horiseon-div {
  background-image: url(../images/horiseon.jpeg);
  background-size: cover;
  background-position: center;
  height: 100%;
  width: 100%;
}

#horiseon {
  grid-area: horiseon;
  border: solid 3px rgb(9, 42, 78);
  overflow: hidden;
  margin: 10px;
}

#project2 {
  grid-area: project2;
  background-image: url("../images/placeholder.png");
  border: solid 3px rgb(9, 42, 78);
  margin: 10px;
}

#project3 {
  grid-area: project3;
  background-image: url("../images/placeholder.png");
  border: solid 3px rgb(9, 42, 78);
  margin: 10px;
}

#project4 {
  grid-area: project4;
  background-image: url("../images/placeholder.png");
  border: solid 3px rgb(9, 42, 78);
  margin: 10px;
}

#project5 {
  grid-area: project5;
  background-image: url("../images/placeholder.png");
  border: solid 3px rgb(9, 42, 78);
  margin: 10px;
}

.project-content .headings {
  padding-left: 5px;
}

.categoryGridArea {
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  cursor: pointer;
  display: grid;
  align-content: end;
}

.headings {
  background-color: rgba(0,0,0,0.7);
  color: white;
  font-size: 18px;
  border-top: 5px solid rgb(23, 67, 114);
}

.project-content div {
  font-size: 30px;
}

/*contact section*/
#contact-me {
  display: flex;
  margin: 30px;
  font-size: 20px;
  align-items: center;
}

#contact-me h2 {
  font-size: 40px;
  border-right: rgb(9, 42, 78)solid 5px;
  padding: 20px;
  text-align: end;
}

#contact-me li img {
height: 60px;
width: 65px;
}

#contact-me ul{
  width:100vw;
  display:flex;
  justify-content: space-around;
  gap:10vw;
}

footer {
  background-color: rgb(9, 42, 78);
  color: white;
  padding-left: 10px;
  max-width:100%;
}
body {
  font-size: 16px;
}
  
  @media only screen and (max-width: 768px) {
    #name {
      position: static;
    }
    .hero-banner h2 {
      display: none;
    }
    nav {
      display: flex;
      flex-direction: column;
      align-items: center;
    }
  
    nav ul {
      display: block;
      padding: 0;
    }
  
    nav li {
      margin-bottom: 10px;
    }

    nav li a {
      font-size: 15px;
      text-align: center;
    }
  .inner-image {
    max-width: 150px;
  }
    .project-content {
      height: 600px;
      max-width:100%;
      display: grid;
      grid-template-rows: 1fr;
      grid-template-columns: 300px 300px;
      grid-template-areas: 
      "horiseon"
      "project2"
      "project3"
      "project4"
      "project5";
    }
    .about-me-title,
    .projects-title,
    .contact-me-title {
      display: block;
      text-align: center;
    }
    #about h2 {
      font-size: 20px;
      margin: 0;
    }
    #projects h2 {
      font-size: 20px;
      margin: -15px;
    }
    #contact-me h2 {
      font-size: 20px;
      margin: -10px;
    }

    .about-me-text {
      font-size: 15px;
    }
    #contact-me ul {
      flex-direction: column;
      margin: 40px;
    }
    #contact-me li img {
      height: 30px;
      width: 35px;
      margin-right: 350px;
    }
    #contact-me div {
      font-size: 15px;
      margin-bottom: -70px;
    }
    footer {
      font-size: 15px;
    }
  }

